--- a/A/Altice/Altice_Fall2020/ads/OPT_iStart_AO_60_1yr(300Mbps)/300x250/300x250.html
+++ b/A/Altice/Altice_Fall2020/ads/OPT_iStart_AO_60_1yr(300Mbps)/300x250/300x250.html
@@ -174,7 +174,7 @@ amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText31", "TEXT", "<div style='top: 33px;left: 20px;width: 260px;font-size: 21.7px;line-height: 1.05;text-align: center;'>300 Mbps Internet</div>");
 amo.registerAttribute("frameText32", "TEXT", "<div style='top: 115px;left: 20px;width: 260px;font-size: 21.7px;line-height: 1.05;text-align: center;'>+ Smart WiFi with intelligent coverage</div>");
 amo.registerAttribute("frameText33", "TEXT", "<div class='AlticeRegular' style='top:175px;left:24px;font-size:9px;line-height:1.1;'>Wired connection up to 300 Mbps.<br>WiFi speeds may vary.</div>");
-amo.registerAttribute("frameText41", "TEXT", "<div style='top: 123px;left: 20px;width: 260px;font-size: 23px;line-height: 1.05;text-align: center;'>Live, streaming, and On Demand TV</div>");
+amo.registerAttribute("frameText41", "TEXT", "<div style='top: 115px;left: 20px;width: 260px;font-size: 21.7px;line-height: 1.05;text-align: center;'>Live, streaming, and<br>On Demand TV</div>");
 amo.registerAttribute("frameText42", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText43", "TEXT", "&nbsp;");
 amo.registerAttribute("frameText51", "TEXT", "<div style='top: 21px;left: 23px;font-size: 19px;line-height:1.1;'>Internet & TV<br>starting at</div>");
