--- a/A/Altice/Altice_Fall2020/ads/OPT_AO_65_1yr(300Mbps)(withCard)/300x250/300x250_frame3.html
+++ b/A/Altice/Altice_Fall2020/ads/OPT_AO_65_1yr(300Mbps)(withCard)/300x250/300x250_frame3.html
@@ -163,7 +163,7 @@
 amo.registerClick("clickUrl","https://www.altice.com");
 amo.registerAttribute("ctaText","TEXT","Shop now");
 amo.registerAttribute("frameVideo1", "TEXT", "300x250_OPT_FALL_ACQ_AO_Amz_65Yr1_NonSub_NY_Frame_1.mp4");
-amo.registerAttribute("frameImage1", "TEXT", "300x250_OPT_FALL_ACQ_AO_Amz_65Yr1_NonSub_NY_Frame_1.png");
+amo.registerAttribute("frameImage1", "TEXT", "1x1.png");
 amo.registerAttribute("frameImage2", "IMAGE", "300x250_OPT_FALL_ACQ_AO_Amz_65Yr1_NonSub_NY_Frame_2.png");
 amo.registerAttribute("frameVideo3", "IMAGE", "WifiSymbol.mp4");
 amo.registerAttribute("frameImage4", "IMAGE", "300x250_OPT_FALL_ACQ_AO_Amz_65Yr1_NonSub_NY_Frame_4.png");
@@ -454,9 +454,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 167px;left: 24px;
           }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frameVideo1', {x:'100%'})
-            .to('#frameImage1', {x:0}, '-=0.3')
-            .to('#frame1', (flag==true?{}:{delay:2, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
