--- a/A/Altice/Altice_Fall2020/ads/OPT_AO_65_1yr(300Mbps)(withCard)/728x90/728x90_frame2.html
+++ b/A/Altice/Altice_Fall2020/ads/OPT_AO_65_1yr(300Mbps)(withCard)/728x90/728x90_frame2.html
@@ -145,7 +145,8 @@
 amo.registerClick("clickUrl","https://www.altice.com");
 
 amo.registerAttribute("ctaText","TEXT","Shop now");
-amo.registerAttribute("frameImage1", "IMAGE", "728x90_OPT_FALL_ACQ_AO_Amz_65Yr1_NonSub_NY_Frame_1.png");
+amo.registerAttribute("frameVideo1", "TEXT", "728x90_OPT_FALL_ACQ_AO_Amz_65Yr1_NonSub_NY_Frame_1.mp4");
+amo.registerAttribute("frameImage1", "TEXT", "1x1.png");
 amo.registerAttribute("frameImage2","IMAGE","728x90_OPT_FALL_ACQ_AO_Amz_65Yr1_NonSub_NY_Frame_2.png");
 amo.registerAttribute("frameImage3","IMAGE","728x90_OPT_FALL_ACQ_AO_Amz_65Yr1_NonSub_NY_Frame_3.png");
 amo.registerAttribute("frameVideo4","IMAGE","WifiSymbol.mp4");
@@ -222,7 +223,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 10px;left: 376px;
       background-color:#f5f4f7;
       opacity:1;">
       <!-- <div id="ref" class="asset adSizeContainer"data-image="ref"></div> -->
-      <!-- <div id="frameVideo1" style="top: -15px;left: 423px;width: 110px;height: 100px;"><video muted playsinline autoplay style="width:100%;"></video></div> -->
+      <div id="frameVideo1" style="top: 0px;left: 0px;width: 211px;height: 90px;"><video muted playsinline autoplay style="width:100%;"></video></div>
       <div id="frameImage1" class="asset adSizeContainer" data-image="frameImage1"></div>
       <!-- <div id="shape1"
         style="top: 0;
@@ -254,7 +255,8 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 10px;left: 376px;
           left: 54px;
           width: 92px;
           height: 36px;
-          transform: scale(0.55);">
+          transform: scale(0.55);
+          opacity:0;">
         <div class="asset" data-image="switchImage" style="position: relative;width: inherit;height: inherit;"></div>
         <div class="switch-button"></div>
       </div>
@@ -313,7 +315,7 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 10px;left: 376px;
         ad.root.addEventListener("click", function(e) {
           if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
         });
-        // setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
+        setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
         setTimeout(function(){ ad.layers.frameImage4.querySelector('video').src = adData.frameVideo4; },11000);
         var video4 = ad.layers.frameImage4.querySelector('video'), videoLoad4 = false;
         video4.src = adData.frameVideo4;
@@ -406,18 +408,27 @@ amo.registerAttribute("frameText53", "TEXT", "<div style='top: 10px;left: 376px;
           .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.7, opacity:0, onComplete: animateFrame3}));
         }
         var animateFrame1 = function(flag){
-          var animateSwitch = function() {
-            ad.root.querySelector('.switch').classList.add('on');
-          }
-          gsap.set('#frameText1', {x: '0'});
-          gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#frameText1', {autoAlpha:1})
-          .to('#frameImage1', {autoAlpha:1,delay:1.5, onComplete: animateSwitch})
-          .to('#frame1', (flag==true?{}:{delay:2.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+          // var animateSwitch = function() {
+          //   ad.root.querySelector('.switch').classList.add('on');
+          // }
+          // gsap.set('#frameText1', {x: '0'});
+          // gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+          // .to('#frameText1', {autoAlpha:1})
+          // .to('#frameImage1', {autoAlpha:1,delay:1.5, onComplete: animateSwitch})
+          // .to('#frame1', (flag==true?{}:{delay:2.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           // gsap.to('#shape1', {y:'0',ease:'none',duration:0.7,delay:1.6})
           // gsap.to('#shape2', {y:'0',ease:'none',duration:0.7,delay:1.8})
           // gsap.to('#shape3', {y:'0',ease:'none',duration:0.7,delay:1.8})
           // gsap.to('#shape4', {y:'0',ease:'none',duration:0.7,delay:2.1})
+          gsap.set('#frameText1', {x: '0'});
+          ad.layers.frameVideo1.querySelector('video').onplay = function(){
+            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+            .to('#frameText1', {autoAlpha:1})
+          }
+          ad.layers.frameVideo1.querySelector('video').onended = function(){
+            gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
+            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+          }
         }
         if('frame1' in ad.layers) ad.layers.frame1.remove();
                     gsap.delayedCall(1.2, animateFrame2, [true]);
